--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -10,7 +10,11 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="417dp" />
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:id="@+id/cos"/>
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
@@ -21,6 +25,13 @@
             android:layout_height="match_parent"
             android:onClick="onClickAddSetButton"
             android:text="dodaj nowy\n zestaw słówek" />
+        <Button
+            android:id="@+id/add_words"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:onClick="onClickAddFromFile"
+            android:text="dodaj słówka z pliku" />
+
         <Button
             android:id="@+id/delete_button"
             android:layout_width="wrap_content"
